# json-parsers-benchmark

./: Cargo.toml  README.md
benches/: json_parsing.rs
golang/: go.mod  main_test.go
src/: main.rs
