[package]
name = "bench-comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.2"
rustc-serialize = "0.3.24"
serde_json = "1.0.108"
simd-json = "0.13.4"
urlencoding = "2.1.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[lib]
bench = false

[[bench]]
name = "json_parsing"
harness = false
